# signal-loom

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: mac-build.yml  release.yml
android/: .gitignore
android/app/: build.gradle
desktop/kde/signal-loom-globalmenu/: CMakeLists.txt  README.md  appmenumodel.cpp  install.sh  metadata.json
desktop/kde/signal-loom-globalmenu/qml/: main.qml
docs/: FEATURE_BREAKDOWN.md  HANDOFF.md  PRINT-STATUS.md  PROJECT_DOCUMENTATION.md  TASK_LIST.md  gpu-frame-server-export-brief.md  vertex-authentication.md
docs/audits/: claude-broken-feature-audit-2026-07-16.md  codebase-correctness-audit-2026-07-16.md  fable-partial-audit-comparison-2026-07-16.md  fake-indexeddb-6.2.5-license.md  fbl-029-elevenlabs-pcm-correction-2026-07-18.md  flow-node-audit-2026-07-14.md  flow-node-audit-2026-07-15.md  flow-release-verification-2026-07-14.md  harfbuzzjs-1.4.0-license.md  pako-2.1.0-noble-hashes-2.2.0-license.md  paper-stability-live-2026-07-14.md  paper-workspace-project1.md  provider-model-audit-2026-07-14.md
docs/notes/: 432-android-dex-port-plan.md  863-image-performance-pixel-store-foundation.md  866-paper-open-font-library.md  867-paper-harfbuzz-shaping.md  868-paper-deterministic-text-composition.md  869-paper-managed-icc-profiles.md  870-paper-typed-render-plan.md  871-paper-native-hybrid-pdfx.md  872-paper-failclosed-production-preflight.md  873-paper-stability-honest-print-resolution.md  900-paper-managed-print-core.md  901-flow-node-provider-vertex-audit.md  902-linux-main-application-menu-install.md  903-flow-contract-runtime-parity-audit.md  904-signaloom-bilingual-magazine-demo.md  905-paper-native-pdf-png-export-fix.md  906-paper-kdp-soft-proof-profile-repair.md  907-paper-canvas-export-fidelity.md  (+113 more)
docs/release/: 0.9.13.md  (+1 more)
electron/: automation-paths.cjs  bundled-font-library.cjs  external-open.cjs  flow-import-worker.mjs  interface-locale-authority.cjs  launcher.cjs  linux-windowing.cjs  main.mjs  media-format-registry.cjs  menu.cjs  paper-image-export.cjs  paper-pdf-export.cjs  preload.cjs  project-authority.cjs  project-files.cjs  project-schema.cjs  startup-project.cjs  version-display.cjs  vertex-auth.cjs  window-options.cjs
marketing/: README.md  blog-aggressive-laziness.md  calendar.md  community-targets.md  discord-blueprint.md  launch-kit-0.9.10.md  outreach-templates.md  recruiting-posts.md  reddit-engagement-playbook.md  reddit-posts.md  x-launch.md
ops/: secrets-policy.md
packaging/: signal-loom.desktop
scripts/: acquire-bundled-font-library.sh  android-localdream-gate-lib.mjs  android-localdream-gate-lib.test.mjs  android-localdream-gate.mjs  android-localdream-setup-lib.mjs  android-localdream-setup-lib.test.mjs  android-localdream-setup.mjs  check-image-parity-run-snapshot.mjs  check-image-parity-run-snapshot.test.mjs  comic-panel-art-lib.mjs  comic-panel-art-lib.test.mjs  create-mac-icon.sh  create-signal-loom-demo-project.mjs  create-signaloom-magazine-demo.mjs  create-signaloom-magazine-demo.test.ts  create-sloom-origin-zine-flow-project.mjs  create-sloom-origin-zine.mjs  create-sloom-origin-zine.test.ts  electron-builder-after-pack.cjs  electron-builder-before-pack.cjs  electron-single-instance-probe.mjs  font-pack-release-contract.test.mjs  font-pack-test-fixture.mjs  font-pack-verification.mjs  font-pack-verification.test.mjs  formatFontFamily_chromium_oracle.py  generate-flow-node-audit.mjs  generate-flow-node-audit.test.mjs  generate-oss-licenses.mjs  generate-provider-model-audit.mjs  generate-provider-model-audit.test.mjs  headless-comic-panel-art.mjs  install-desktop-launcher.sh  native-paper-kdp-soft-proof-smoke.mjs  native-paper-pdf-parity-lib.mjs  native-paper-pdf-parity-lib.test.mjs  native-paper-pdf-parity.mjs  native-real-project-smoke.mjs  native-real-project-soak.mjs  native-real-project-video-render-parity.mjs  (+28 more)
shared/: flow-result-value-contract.json  flow-result-values.cjs  project-schema.json  third-party-components.json  workspaceMenus.json
src/: App.fileOperationErrors.test.tsx  App.flowContextMenu.test.tsx  App.tsx  index.css  main.tsx
(+1700 files in other folders)
